syntax = "proto3";

package sfc_player;

import "Messages/Player/General/Find/Filters/get_players_profile_filter.proto";
import "Messages/Player/General/Find/Filters/get_players_stats_filter.proto";

option csharp_namespace = "SFC.Player.Contracts.Models.Player.General.Find.Filters";

message GetPlayersFilter
{
    GetPlayersProfileFilter profile = 1;
    GetPlayersStatsFilter stats = 2;
}