syntax = "proto3";

package sfc_player;

import "Messages/Player/General/Find/Filters/get_players_general_profile_filter.proto";
import "Messages/Player/General/Find/Filters/get_players_football_profile_filter.proto";

option csharp_namespace = "SFC.Player.Contracts.Models.Player.General.Find.Filters";

message GetPlayersProfileFilter
{
    GetPlayersGeneralProfileFilter general = 1;
    GetPlayersFootballProfileFilter football = 2;
}