syntax = "proto3";

package sfc_player;

import "Models/Player/General/player.proto";

option csharp_namespace = "SFC.Player.Contracts.Messages.Player.General.Get";

message GetPlayerResponse
{
    Player player = 1;
}